--- a/client-app/package.json
+++ b/client-app/package.json
@@ -7,16 +7,18 @@
     "@types/node": "12.6.8",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
-    "@types/uuid": "^3.4.5",
-    "axios": "^0.19.0",
-    "mobx": "^5.13.0",
-    "mobx-react-lite": "^1.4.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/uuid": "^3.4.9",
+    "axios": "^0.19.2",
+    "mobx": "^5.15.4",
+    "mobx-react-lite": "^1.5.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.1",
     "semantic-ui-react": "^0.87.3",
     "typescript": "3.5.3",
-    "uuid": "^3.3.2"
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
